[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Uncial_Antiqua/Unical_Antiqua.tres" type="DynamicFont" id=2]

[node name="OptionsMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 682.0
margin_bottom = 400.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 191.0
margin_top = 100.0
margin_right = 491.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 200 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="ColorRect" type="ColorRect" parent="CenterContainer/MarginContainer"]
margin_right = 300.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_right = 300.0
margin_bottom = 200.0
custom_constants/separation = 24

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 11.0
margin_right = 300.0
margin_bottom = 65.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "OPTIONS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 300.0
margin_bottom = 200.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 95.0
margin_right = 205.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 110.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MasterVolume"]
margin_top = 1.0
margin_right = 44.0
margin_bottom = 15.0
text = "Master"

[node name="HSlider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MasterVolume"]
margin_left = 48.0
margin_right = 98.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="Music" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 110.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Music"]
margin_top = 1.0
margin_right = 38.0
margin_bottom = 15.0
text = "Music"

[node name="HSlider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Music"]
margin_left = 42.0
margin_right = 92.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="Dialogue" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 110.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Dialogue"]
margin_top = 1.0
margin_right = 56.0
margin_bottom = 15.0
text = "Dialogue"

[node name="HSlider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Dialogue"]
margin_left = 60.0
margin_right = 110.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 110.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SFX"]
margin_top = 1.0
margin_right = 22.0
margin_bottom = 15.0
text = "SFX"

[node name="HSlider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SFX"]
margin_left = 26.0
margin_right = 76.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="Return" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 110.0
margin_bottom = 100.0
text = "Return"

[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MasterVolume/HSlider" to="." method="_on_Master_volume_changed"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Music/HSlider" to="." method="_on_Music_volume_changed"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Dialogue/HSlider" to="." method="_on_Dialogue_volume_changed"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SFX/HSlider" to="." method="_on_SFX_volume_changed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
